# nomocrat-project

./: README.md  check_all.bat  check_all.sh  create_venv.bat  create_venv.sh  pyproject.toml  requirements.txt
data/: .gitignore
docs/source/: api.rst  conf.py  index.rst  nomocrat_project.rst  usage.rst
docs/source/nomocrat_project/: annotations.rst  pages.rst
docs/source/nomocrat_project/annotations/: common.rst  layout_data_processor.rst  ocr_data_processor.rst  ocr_data_to_sql.rst  ocr_data_visualiser.rst
docs/source/nomocrat_project/annotations/ocr_data_visualiser/: ocr_data_visualiser.rst
docs/source/nomocrat_project/pages/: page_extractor.rst  page_sampler.rst
docs/source/usage/: install.rst
src/nomocrat_project/annotations/: __init__.py  baseline_texts_extractor.py  common.py  layout_data_processor.py  ocr_data_processor.py  ocr_data_to_sql.py  ocr_data_visualiser.py  pipeline_data_draft_generator.py
src/nomocrat_project/annotations/layout_data_visualiser/: __init__.py  layout_data_visualiser.py  style.css
src/nomocrat_project/annotations/ocr_data_visualiser/: __init__.py  _db_info.php  api.php  export.php  ocr_data_visualiser.py  script.js  style.css
src/nomocrat_project/pages/: __init__.py  page_extractor.py  page_sampler.py
tools/: sphinx_api_doc_maker.py  validate_project.py
